update display function to alternate show_images; add output to docker compose

--- a/notebooks/04_gan/01_dcgan/dcgan.ipynb
+++ b/notebooks/04_gan/01_dcgan/dcgan.ipynb
@@ -44,6 +44,90 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7fbf688d",
+   "metadata": {},
+   "source": [
+    "## Customize Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bdc5744",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install --no-index -f https://github.com/dreoporto/ptmlib/releases ptmlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "308ea3c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ptmlib.time import Stopwatch, AlertSounds\n",
+    "import ptmlib.charts as pch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70143606",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_stopwatch = Stopwatch()\n",
+    "stopwatch = Stopwatch()\n",
+    "\n",
+    "main_stopwatch.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62033df7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AOPORTO MODS\n",
+    "\n",
+    "import os\n",
+    "# import sys\n",
+    "\n",
+    "# module_path = os.path.abspath('/app/notebooks/03_vae/03_vae_faces')\n",
+    "# if module_path not in sys.path:\n",
+    "#     sys.path.append(module_path)\n",
+    "\n",
+    "# if not os.path.exists('./output'):\n",
+    "#     os.mkdir('./output')\n",
+    "\n",
+    "def make_missing_directories(directory_file_full_path: str) -> None:\n",
+    "    \"\"\"\n",
+    "    Create any required directories for the provided directory/file path if they do not exist\n",
+    "\n",
+    "    :param directory_file_full_path: full path for the directory or file we will be using\n",
+    "    :return: None\n",
+    "    \"\"\"\n",
+    "    directory_path = os.path.dirname(directory_file_full_path)\n",
+    "\n",
+    "    if directory_path == '':\n",
+    "        # no directory specified\n",
+    "        return\n",
+    "    \n",
+    "    if os.path.exists(directory_path):\n",
+    "        # all folders already exist\n",
+    "        return\n",
+    "    \n",
+    "    os.makedirs(directory_path)\n",
+    "    print(f'one or more folders were created: {directory_path}')\n",
+    "\n",
+    "make_missing_directories('./output/buzz.txt')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "339e6268-ebd7-4feb-86db-1fe7abccdbe5",
    "metadata": {},
    "source": [
@@ -61,7 +145,7 @@
     "CHANNELS = 1\n",
     "BATCH_SIZE = 128\n",
     "Z_DIM = 100\n",
-    "EPOCHS = 300\n",
+    "EPOCHS = 300 #50 #300 # TODO AEO TEMP\n",
     "LOAD_MODEL = False\n",
     "ADAM_BETA_1 = 0.5\n",
     "ADAM_BETA_2 = 0.999\n",
@@ -84,6 +168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "stopwatch.start()\n",
+    "\n",
     "train_data = utils.image_dataset_from_directory(\n",
     "    \"/app/data/lego-brick-images/dataset/\",\n",
     "    labels=None,\n",
@@ -93,7 +179,9 @@
     "    shuffle=True,\n",
     "    seed=42,\n",
     "    interpolation=\"bilinear\",\n",
-    ")"
+    ")\n",
+    "\n",
+    "stopwatch.stop()"
    ]
   },
   {
@@ -422,7 +510,9 @@
    },
    "outputs": [],
    "source": [
-    "dcgan.fit(\n",
+    "stopwatch.start()\n",
+    "\n",
+    "history = dcgan.fit(\n",
     "    train,\n",
     "    epochs=EPOCHS,\n",
     "    callbacks=[\n",
@@ -430,7 +520,9 @@
     "        tensorboard_callback,\n",
     "        ImageGenerator(num_img=10, latent_dim=Z_DIM),\n",
     "    ],\n",
-    ")"
+    ")\n",
+    "\n",
+    "stopwatch.stop()"
    ]
   },
   {
@@ -567,6 +659,36 @@
     "        cnt += 1\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54eb9c98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_stopwatch.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ac96aed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pch.show_history_chart(history, \"loss\", save_fig_enabled=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be8e7d68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pch.show_history_chart(history, \"acc\", save_fig_enabled=False)"
    ]
   }
  ],
