--- a/notebooks/04_gan/02_wgan_gp/wgan_gp_bricks_LOCAL copy.ipynb
+++ b/notebooks/04_gan/02_wgan_gp/wgan_gp_bricks_LOCAL copy.ipynb
@@ -5,7 +5,7 @@
    "id": "b076bd1a-b236-4fbc-953d-8295b25122ae",
    "metadata": {},
    "source": [
-    "# 🤪 WGAN - CelebA Faces"
+    "# 🧱 WGAN - Bricks Data"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "9235cbd1-f136-411c-88d9-f69f270c0b96",
    "metadata": {},
    "source": [
-    "In this notebook, we'll walk through the steps required to train your own Wasserstein GAN on the CelebA faces dataset"
+    "## Train your own Wasserstein GAN on the **BRICKS DATASET**"
    ]
   },
   {
@@ -21,7 +21,10 @@
    "id": "098731a6-4193-4fda-9018-b14114c54250",
    "metadata": {},
    "source": [
-    "The code has been adapted from the excellent [WGAN-GP tutorial](https://keras.io/examples/generative/wgan_gp/) created by Aakash Kumar Nain, available on the Keras website."
+    "Code adapted from:\n",
+    "-  [WGAN-GP tutorial](https://keras.io/examples/generative/wgan_gp/)\n",
+    "- DCGAN - Bricks Data\n",
+    "- WGAN - CelebA Faces"
    ]
   },
   {
@@ -44,6 +47,14 @@
     "    metrics,\n",
     "    optimizers,\n",
     ")\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath('c:\\_AOStuff\\Development\\ml-ai\\generative2')\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
+    "\n",
+    "print(sys.path)\n",
     "\n",
     "from notebooks.utils import display, sample_batch"
    ]
@@ -91,6 +102,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2082ee75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AOPORTO MODS\n",
+    "\n",
+    "import os\n",
+    "# import sys\n",
+    "\n",
+    "# module_path = os.path.abspath('/app/notebooks/03_vae/03_vae_faces')\n",
+    "# if module_path not in sys.path:\n",
+    "#     sys.path.append(module_path)\n",
+    "\n",
+    "# if not os.path.exists('./output'):\n",
+    "#     os.mkdir('./output')\n",
+    "\n",
+    "def make_missing_directories(directory_file_full_path: str) -> None:\n",
+    "    \"\"\"\n",
+    "    Create any required directories for the provided directory/file path if they do not exist\n",
+    "\n",
+    "    :param directory_file_full_path: full path for the directory or file we will be using\n",
+    "    :return: None\n",
+    "    \"\"\"\n",
+    "    directory_path = os.path.dirname(directory_file_full_path)\n",
+    "\n",
+    "    if directory_path == '':\n",
+    "        # no directory specified\n",
+    "        return\n",
+    "    \n",
+    "    if os.path.exists(directory_path):\n",
+    "        # all folders already exist\n",
+    "        return\n",
+    "    \n",
+    "    os.makedirs(directory_path)\n",
+    "    print(f'one or more folders were created: {directory_path}')\n",
+    "\n",
+    "make_missing_directories('./output/buzz.txt')\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "339e6268-ebd7-4feb-86db-1fe7abccdbe5",
    "metadata": {},
@@ -106,19 +159,23 @@
    "outputs": [],
    "source": [
     "IMAGE_SIZE = 64\n",
-    "CHANNELS = 3\n",
+    "CHANNELS = 1\n",
     "BATCH_SIZE = 64 # 512\n",
-    "NUM_FEATURES = 64\n",
-    "Z_DIM = 128 # LATENT DIM\n",
-    "LEARNING_RATE = 0.0002\n",
+    "# NUM_FEATURES = 64     # NOT USED\n",
+    "Z_DIM = 128 # 100 # 192 # 128 # LATENT DIM\n",
+    "LEARNING_RATE = 0.0002 # 0.0002\n",
     "ADAM_BETA_1 = 0.5\n",
-    "ADAM_BETA_2 = 0.999\n",
-    "EPOCHS = 20 # 200\n",
+    "ADAM_BETA_2 = 0.9 # 0.999\n",
+    "EPOCHS = 20 # 300\n",
     "CRITIC_STEPS = 3\n",
     "GP_WEIGHT = 10.0\n",
     "LOAD_MODEL = False\n",
-    "ADAM_BETA_1 = 0.5\n",
-    "ADAM_BETA_2 = 0.9"
+    "# ADAM_BETA_1 = 0.5\n",
+    "# ADAM_BETA_2 = 0.9\n",
+    "NOISE_PARAM = 0.1\n",
+    "\n",
+    "# only show every X images (images are still generated and saved!)\n",
+    "DISPLAY_RATE = 2"
    ]
   },
   {
@@ -138,16 +195,15 @@
    "source": [
     "stopwatch.start()\n",
     "\n",
-    "# Load the data\n",
     "train_data = utils.image_dataset_from_directory(\n",
-    "    \"/app/data/celeba-dataset/img_align_celeba/img_align_celeba\",\n",
+    "    \"../../../data/lego-brick-images/dataset/\",\n",
     "    labels=None,\n",
-    "    color_mode=\"rgb\",\n",
+    "    color_mode=\"grayscale\",\n",
     "    image_size=(IMAGE_SIZE, IMAGE_SIZE),\n",
     "    batch_size=BATCH_SIZE,\n",
     "    shuffle=True,\n",
     "    seed=42,\n",
-    "    validation_split = 0.9,  # get a subset of images to reduce training time\n",
+    "    validation_split = 0.75,  # get a subset of images to reduce training time\n",
     "    subset='training',  # get a subset of images to reduce training time\n",
     "    interpolation=\"bilinear\",\n",
     ")\n",
@@ -188,11 +244,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "712040d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(train_sample))\n",
+    "\n",
+    "my_take = train.take(1)\n",
+    "\n",
+    "print(len(my_take))\n",
+    "print(type(my_take))\n",
+    "\n",
+    "my_sample = my_take.get_single_element()\n",
+    "\n",
+    "print(len(my_sample))\n",
+    "print(type(my_sample))\n",
+    "print(tf.shape(my_sample))\n",
+    "\n",
+    "print(my_sample[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b86c15ef-82b2-4a75-99f7-2d8810440403",
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(train_sample, cmap=None)"
+    "display(train_sample)"
    ]
   },
   {
@@ -410,6 +489,7 @@
    "outputs": [],
    "source": [
     "# Compile the GAN\n",
+    "\n",
     "wgangp.compile(\n",
     "    c_optimizer=optimizers.Adam(\n",
     "        learning_rate=LEARNING_RATE, beta_1=ADAM_BETA_1, beta_2=ADAM_BETA_2\n",
@@ -437,13 +517,19 @@
     "\n",
     "tensorboard_callback = callbacks.TensorBoard(log_dir=\"./logs\")\n",
     "\n",
-    "\n",
     "class ImageGenerator(callbacks.Callback):\n",
-    "    def __init__(self, num_img, latent_dim):\n",
+    "    def __init__(self, num_img, latent_dim, display_rate):\n",
     "        self.num_img = num_img\n",
     "        self.latent_dim = latent_dim\n",
+    "        self.display_rate = display_rate\n",
     "\n",
     "    def on_epoch_end(self, epoch, logs=None):\n",
+    "\n",
+    "        # only show every X images (images are still generated and saved!)\n",
+    "        # using epoch + 1 since notebook output shows 'Epoch 1/x'\n",
+    "        # always show first image (epoch == 0)\n",
+    "        show_image = epoch == 0 or (epoch + 1) % self.display_rate  == 0\n",
+    "        \n",
     "        random_latent_vectors = tf.random.normal(\n",
     "            shape=(self.num_img, self.latent_dim)\n",
     "        )\n",
@@ -452,8 +538,9 @@
     "        generated_images = generated_images.numpy()\n",
     "        display(\n",
     "            generated_images,\n",
-    "            save_to=\"./output/generated_img_%03d.png\" % (epoch),\n",
-    "            cmap=None,\n",
+    "            save_to=\"./output/WGAN_GP_BRICKS__generated_img_%03d.png\" % (epoch + 1),\n",
+    "            # cmap=None,\n",
+    "            show_image=show_image\n",
     "        )"
    ]
   },
@@ -471,15 +558,23 @@
     "history = wgangp.fit(\n",
     "    train,\n",
     "    epochs=EPOCHS,\n",
-    "    steps_per_epoch=2,\n",
+    "    # steps_per_epoch=2,\n",
     "    callbacks=[\n",
     "        model_checkpoint_callback,\n",
     "        tensorboard_callback,\n",
-    "        ImageGenerator(num_img=10, latent_dim=Z_DIM),\n",
+    "        ImageGenerator(num_img=10, latent_dim=Z_DIM, display_rate = DISPLAY_RATE),\n",
     "    ],\n",
     ")\n",
     "\n",
     "stopwatch.stop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bc48618",
+   "metadata": {},
+   "source": [
+    "### Save the Models 💃🕺"
    ]
   },
   {
@@ -511,7 +606,7 @@
    "source": [
     "z_sample = np.random.normal(size=(10, Z_DIM))\n",
     "imgs = wgangp.generator.predict(z_sample)\n",
-    "display(imgs, cmap=None)"
+    "display(imgs) #, cmap=None)"
    ]
   },
   {
@@ -558,6 +653,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.18"
   },
   "vscode": {
    "interpreter": {
