--- a/notebooks/03_vae/03_vae_faces/vae_faces - Copy.ipynb
+++ b/notebooks/03_vae/03_vae_faces/vae_faces - Copy.ipynb
@@ -96,11 +96,11 @@
    "source": [
     "IMAGE_SIZE = 64\n",
     "CHANNELS = 3\n",
-    "BATCH_SIZE = 256  # 128\n",
+    "BATCH_SIZE = 128\n",
     "NUM_FEATURES = 128  # 64\n",
     "Z_DIM = 200\n",
     "LEARNING_RATE = 0.0001  # 0.0005\n",
-    "EPOCHS = 20  # 10\n",
+    "EPOCHS = 20 # 10\n",
     "BETA = 2000\n",
     "LOAD_MODEL = False"
    ]
